--- a/environment.yml
+++ b/environment.yml
@@ -37,8 +37,8 @@ dependencies:
   - libedit=3.1.20221030
   - libev=4.33
   - libffi=3.4.4
-  - libgfortran=5.0.0
-  - libgfortran5=11.3.0
+#  - libgfortran=5.0.0
+#  - libgfortran5=11.3.0
   - libnetcdf=4.8.1
   - libnghttp2=1.57.0
   - libopenblas=0.3.21
